--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <base href="$FLUTTER_BASE_HREF">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A Todo App with task sharing capabilities">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,10 +13,13 @@
   <meta name="apple-mobile-web-app-title" content="todo_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
+  <!-- Deep linking configuration -->
+  <link rel="alternate" href="android-app://com.example.todo_app/https/todo-app-fresh.web.app/task" />
+  <link rel="alternate" href="ios-app://com.example.todo_app/todoapp/task" />
+
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>TODO App</title>
+  <title>todo_app</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -26,65 +30,17 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
-  <div id="loading">
-    <style>
-      body {
-        inset: 0;
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-        position: fixed;
-      }
-      #loading {
-        align-items: center;
-        display: flex;
-        height: 100%;
-        justify-content: center;
-        width: 100%;
-      }
-      #loading img {
-        animation: 1s ease-in-out 0s infinite alternate breathe;
-        opacity: .66;
-        transition: opacity .4s;
-      }
-      #loading.main_done img {
-        opacity: 1;
-      }
-      #loading.init_done img {
-        animation: .33s ease-in-out 0s 1 forwards zooooom;
-        opacity: .05;
-      }
-      @keyframes breathe {
-        from {
-          transform: scale(1)
-        }
-        to {
-          transform: scale(0.95)
-        }
-      }
-      @keyframes zooooom {
-        from {
-          transform: scale(1)
-        }
-        to {
-          transform: scale(10)
-        }
-      }
-    </style>
-    <img src="icons/Icon-192.png" alt="Loading indicator..." />
-  </div>
   <script>
-    window.addEventListener('load', function() {
-      var loading = document.querySelector('#loading');
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: async function(engineInitializer) {
-          loading.classList.add('main_done');
-          let appRunner = await engineInitializer.initializeEngine();
-          loading.classList.add('init_done');
-          await appRunner.runApp();
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
         }
       });
     });
